--- a/manifest.json
+++ b/manifest.json
@@ -3,20 +3,12 @@
     "version": "1.0",
     "description": "Build an Extension!",
     "permissions": ["activeTab", "declarativeContent", "storage"],
-    "background": {
-      "scripts": ["background.js"],
-      "persistent": false
-    },
-    "options_page": "options.html",
-    "page_action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "images/get_started16.png",
-        "32": "images/get_started32.png",
-        "48": "images/get_started48.png",
-        "128": "images/get_started128.png"
+    "content_scripts" : [
+      {
+        "js": ["darkPage.js"],
+        "matches": ["<all_urls>"]
       }
-    },
+   ],
     "icons": {
       "16": "images/get_started16.png",
       "32": "images/get_started32.png",
