--- a/manifest.json
+++ b/manifest.json
@@ -10,10 +10,10 @@
       }
    ],
     "icons": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
+      "16": "images/main.png",
+      "32": "images/main.png",
+      "48": "images/main.png",
+      "128": "images/main.png"
     },
     
     "manifest_version": 2
